2016-08-11  David Malcolm  <dmalcolm@redhat.com>

	* selftest-run-tests.c (selftest::run_tests): Call selftest_c_tests.
	* selftest.c (selftest::test_assertions): New function.
	(selftest::selftest_c_tests): New function.
	* selftest.h (selftest::selftest_c_tests): New declaration.

2016-08-11  Richard Biener  <rguenther@suse.de>
	    Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	PR rtl-optimization/72855
	* df-core.c (df_verify): Turn off DF_VERIFY_SCHEDULED at end.

2016-08-11  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	PR target/72863
	* vsx.md (vsx_load_<mode>): For P8LE, emit swaps at expand time.
	(vsx_store_<mode>): Likewise.

2015-08-11  H.J. Lu  <hongjiu.lu@intel.com>

	* config/i386/i386.c (timode_scalar_to_vector_candidate_p): Allow
	TImode CONST_WIDE_INT store.
	(timode_scalar_chain::convert_insn): Handle CONST_WIDE_INT store.

2015-08-11  H.J. Lu  <hongjiu.lu@intel.com>

	* config/i386/i386.h (MOVE_MAX_PIECES): Use TImode in 64-bit
	mode if unaligned SSE load and store are optimal.

2016-08-11  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	PR tree-optimization/71083
	* tree-predcom.c (ref_at_iteration): Correctly align the
	reference type.

2016-08-11  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>

	* config/s390/s390-builtin-types.def: Add INT128 types.
	* config/s390/s390-builtins.def: Add INT128 variants for the add
	sub low-level builtins dealing with TImode.
	* config/s390/s390.c (s390_expand_builtin): Allow mode conversions
	via subreg when expanding a builtin.
	* config/s390/s390.md: Remove UNSPEC_VEC_ADDC_U128,
	UNSPEC_VEC_SUB_U128, and UNSPEC_VEC_SUBC_U128 constants.
	Fix comment.
	* config/s390/vecintrin.h: Adjust builtin names accordingly.
	* config/s390/vx-builtins.md ("vec_add_u128"): Remove expander.
	("vec_addc<mode>", "vec_addc_u128"): Merge to
	"vacc<bhfgq>_<mode>".
	("vec_adde_u128"): Rename to "vacq". Change mode to TImode.
	("vec_addec_u128"): Rename to "vacccq". Change mode to TImode.